# lumen

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  WARDEN_SECURITY_REPORT.md  clippy.toml  index.html  publish.ps1  publish.sh
crates/lumen-analyze/: Cargo.toml
crates/lumen-analyze/src/: lib.rs
crates/lumen-analyze/src/analyzers/: dependency_analyzer.rs  docs_analyzer.rs  performance_analyzer.rs  security_analyzer.rs  seo_analyzer.rs  static_analyzer.rs  uiux_analyzer.rs
crates/lumen-analyze/src/ast/: mod.rs  node.rs  parser.rs  query.rs
crates/lumen-analyze/src/parsers/: css.rs  html.rs  mod.rs  rust.rs  typescript.rs
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: cli.rs  main.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: config.rs  error.rs  project.rs
crates/lumen-detect/: Cargo.toml
crates/lumen-detect/src/: framework.rs  language.rs  lib.rs  project.rs
crates/lumen-fix/: Cargo.toml
crates/lumen-fix/src/: fixer.rs  git.rs  lib.rs  patch.rs  transformers.rs
crates/lumen-fix/src/fixers/: imports.rs  mod.rs  performance.rs  quality.rs  security.rs
crates/lumen-report/: Cargo.toml
crates/lumen-report/src/: lib.rs
crates/lumen-report/src/formats/: html.rs  json.rs  junit.rs  markdown.rs  mod.rs
crates/lumen-score/: Cargo.toml
crates/lumen-score/src/: calculator.rs
crates/lumen-score/src/dimensions/: performance.rs  security.rs  uiux.rs
crates/lumen-testgen/: Cargo.toml
crates/lumen-testgen/src/: analyzer.rs  code_parser.rs  generator.rs  lib.rs  templates.rs
crates/lumen-testgen/src/templates/: nestjs.rs  python.rs  rust.rs  typescript.rs  vitest.rs
crates/lumenx-analyze/: Cargo.toml
crates/lumenx-analyze/src/analyzers/: coverage_analyzer.rs  dependency_analyzer.rs  docs_analyzer.rs  performance_analyzer.rs  security_analyzer.rs  static_analyzer.rs  uiux_analyzer.rs
crates/lumenx-analyze/src/parsers/: html.rs  mod.rs  python.rs  typescript.rs
crates/lumenx-cli/: Cargo.toml  README.md
crates/lumenx-cli/src/: cli.rs  main.rs
crates/lumenx-core/: Cargo.toml
crates/lumenx-detect/: Cargo.toml
crates/lumenx-detect/src/: framework.rs  language.rs  lib.rs
crates/lumenx-diff/: Cargo.toml
crates/lumenx-diff/src/: lib.rs
crates/lumenx-fix/: Cargo.toml
crates/lumenx-fix/src/: lib.rs
crates/lumenx-history/: Cargo.toml
crates/lumenx-history/src/: lib.rs
crates/lumenx-report/: Cargo.toml
crates/lumenx-report/src/formats/: fixes.rs  junit.rs  markdown.rs  mod.rs
crates/lumenx-score/: Cargo.toml
crates/lumenx-score/src/: grade.rs  history.rs  types.rs
crates/lumenx-score/src/dimensions/: docs.rs
crates/lumenx-testgen/: Cargo.toml
crates/lumenx-testgen/src/: cache.rs  lib.rs  parallel_analyzer.rs
crates/lumenx-testgen/src/templates/: nestjs.rs  rust.rs
crates/oalacea-lumen/: Cargo.toml
crates/oalacea-lumen-analysis/: Cargo.toml
crates/oalacea-lumen-analysis/src/: lib.rs
crates/oalacea-lumen-analysis/src/analyze/: mod.rs
crates/oalacea-lumen-analysis/src/analyze/analyzers/: coverage_analyzer.rs  dependency_analyzer.rs  docs_analyzer.rs  mod.rs  performance_analyzer.rs  security_analyzer.rs  seo_analyzer.rs  static_analyzer.rs  uiux_analyzer.rs
crates/oalacea-lumen-analysis/src/analyze/ast/: language.rs  mod.rs  node.rs  parser.rs  query.rs  traversal.rs
crates/oalacea-lumen-analysis/src/analyze/parsers/: css.rs  html.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/oalacea-lumen-analysis/src/ast/: mod.rs  parser.rs  query.rs  traversal.rs
crates/oalacea-lumen-analysis/src/diff/: mod.rs
crates/oalacea-lumen-analysis/src/history/: mod.rs
crates/oalacea-lumen-analysis/src/parsers/: css.rs  go.rs  html.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/oalacea-lumen-core/: Cargo.toml
crates/oalacea-lumen-core/src/: lib.rs  prelude.rs
crates/oalacea-lumen-core/src/core/: error.rs  lib.rs  mod.rs  project.rs
crates/oalacea-lumen-core/src/detect/: framework.rs  language.rs  mod.rs  project.rs
crates/oalacea-lumen-core/src/detect/detectors/: mod.rs
crates/oalacea-lumen-core/src/scoring/: calculator.rs  grade.rs  history.rs  metrics.rs  mod.rs  trend.rs  types.rs
crates/oalacea-lumen-core/src/scoring/dimensions/: coverage.rs  docs.rs  mod.rs  performance.rs  quality.rs  security.rs  seo.rs  uiux.rs
crates/oalacea-lumen/src/: lib.rs  main.rs
crates/oalacea-lumen/src/cli/: analyzer.rs  cli.rs  mod.rs
crates/oalacea-lumen/src/fix/: fixer.rs  git.rs  mod.rs
crates/oalacea-lumen/src/fix/fixers/: imports.rs  mod.rs  performance.rs  security.rs
crates/oalacea-lumen/src/report/: mod.rs
crates/oalacea-lumen/src/report/formats/: html.rs  json.rs  markdown.rs
crates/oalacea-lumen/src/testgen/: analyzer.rs  code_parser.rs  generator.rs  mod.rs  parallel_analyzer.rs
crates/oalacea-lumen/src/testgen/templates/: typescript.rs  vitest.rs
crates/oalacea-lumen/src/watch/: mod.rs  watch.rs
docs/: ARCHITECTURE.md  TUTORIAL.md
examples/: index.html
examples/test-app/: README.md  demo.html  index.html  index.js  lumen.json  package.json
examples/test-app/lumen-reports/: report.md
examples/test-app/src/: index.js  main.js  styles.css
examples/test-app/test/: functions.test.js
lumen-reports/: report.md
public/: index.html  robots.txt  sitemap.xml  styles.css
reports/: lumen-report.html  lumen-report.json  lumen-report.md
