[workspace]
members = [
    "crates/lumenx-cli",
    "crates/lumenx-core",
    "crates/lumenx-detect",
    "crates/lumenx-analyze",
    "crates/lumenx-score",
    "crates/lumenx-report",
    "crates/lumenx-testgen",
    "crates/lumenx-fix",
    "crates/lumenx-history",
    "crates/lumenx-diff",
]
resolver = "2"
