[package]
name = "lumen-analyze"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lumen", "analysis", "static-analysis"]
categories = ["development-tools"]

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-score = { path = "../lumen-score" }

serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

# Tree-sitter for AST parsing
tree-sitter = { workspace = true }

# Tree-sitter grammars
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-css = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"

# HTML parsing is handled via the web-sys or regex for now
# tree-sitter-html is not available in the same form
