[package]
name = "lumen-detect"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumen", "detection", "framework"]
categories = ["development-tools"]
description = "Framework and language detection for Lumen"

[dependencies]
lumen-core = { version = "0.5.0", path = "../lumen-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
tracing = "0.1"

# For parsing Cargo.toml and package.json
cargo_toml = "0.20"
