[package]
name = "lumen-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lumen", "report", "markdown"]
categories = ["development-tools"]

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-score = { path = "../lumen-score" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
handlebars = "6.0"
chrono = { workspace = true }

# Syntax highlighting (optional, use a pure-Rust alternative)
# syntect = "5.2"  # Disabled due to onig_sys build issues on Windows
# Use syntect-no-highlight instead or implement basic highlighting
console = { workspace = true }
colored = { workspace = true }
