[package]
name = "lumen-report"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumen", "report", "markdown"]
categories = ["development-tools"]
description = "Multi-format report generation for Lumen"

[dependencies]
lumen-core = { version = "0.5.0", path = "../lumen-core" }
lumen-score = { version = "0.5.0", path = "../lumen-score" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
handlebars = "6.0"
chrono = "0.4"
console = "0.15"
colored = "2.1"
