[package]
name = "lumen-score"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lumen", "scoring", "quality"]
categories = ["development-tools"]

[dependencies]
lumen-core = { path = "../lumen-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = "0.4"
