[package]
name = "lumen-score"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumen", "scoring", "quality"]
categories = ["development-tools"]
description = "7-dimension quality scoring system for Lumen"

[dependencies]
lumen-core = { version = "0.5.0", path = "../lumen-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = "0.4"
