[package]
name = "lumen-testgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lumen", "testing", "test-generation"]
categories = ["development-tools"]

[dependencies]
lumen-core = { path = "../lumen-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
handlebars = "6.0"
walkdir = "2.5"
regex = { workspace = true }
