[package]
name = "lumenx-cli"
version = "0.6.2"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Oalacea/lumen"
keywords = ["lumenx", "cli", "testing"]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
description = "AI-powered code analysis and test generation toolkit - LumenX CLI"
readme = "../../README.md"

[[bin]]
name = "lumenx"
path = "src/main.rs"

[dependencies]
# Internal crates - path for local dev, version for crates.io
lumenx-core = { path = "../lumenx-core", version = "0.6.2" }
lumenx-detect = { path = "../lumenx-detect", version = "0.6.2" }
lumenx-analyze = { path = "../lumenx-analyze", version = "0.6.2" }
lumenx-score = { path = "../lumenx-score", version = "0.6.2" }
lumenx-report = { path = "../lumenx-report", version = "0.6.2" }
lumenx-testgen = { path = "../lumenx-testgen", version = "0.6.2" }
lumenx-fix = { path = "../lumenx-fix", version = "0.6.2" }
lumenx-history = { path = "../lumenx-history", version = "0.6.2" }
lumenx-diff = { path = "../lumenx-diff", version = "0.6.2" }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
colored = "2.1"

# Async/Logging
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Serialization
serde_json = "1.0"

# File system
walkdir = "2.5"
notify = "6.0"
glob = "0.3"
