[package]
name = "lumenx-core"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumenx", "core", "shared"]
categories = ["development-tools"]
description = "Core types and utilities for LumenX toolkit"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
