[package]
name = "lumenx-fix"
version = "0.6.2"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumen", "fix", "auto-fix"]
categories = ["development-tools"]
description = "Automatic code fixes for Lumen"

[dependencies]
lumenx-core = { version = "0.6.2", path = "../lumenx-core" }
lumenx-score = { version = "0.6.2", path = "../lumenx-score" }
lumenx-analyze = { version = "0.6.2", path = "../lumenx-analyze" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
regex = "1.11"
chrono = "0.4"
diffy = "0.3"
