[package]
name = "lumenx-history"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Oalacea/lumen"
keywords = ["lumen", "history", "scoring", "sqlite"]
categories = ["development-tools", "database"]
description = "Score history and trend tracking for Lumen"

[dependencies]
lumenx-core = { path = "../lumenx-core", version = "0.6.0" }
lumenx-score = { path = "../lumenx-score", version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
tracing = "0.1"
thiserror = "2.0"
