[package]
name = "lumenx-report"
version = "0.5.1"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumen", "report", "markdown"]
categories = ["development-tools"]
description = "Multi-format report generation for Lumen"

[dependencies]
lumenx-core = { version = "0.5.1", path = "../lumenx-core" }
lumenx-score = { version = "0.5.1", path = "../lumenx-score" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
handlebars = "6.0"
chrono = "0.4"
console = "0.15"
colored = "2.1"
