[package]
name = "lumenx-score"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Pamacea/lumen"
keywords = ["lumenx", "scoring", "quality"]
categories = ["development-tools"]
description = "7-dimension quality scoring system for LumenX"

[dependencies]
lumenx-core = { version = "0.5.0", path = "../lumenx-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = "0.4"
