[package]
name = "oalacea-lumen-analysis"
version = "0.6.5"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Oalacea/lumen"
keywords = ["lumen", "oalacea", "analysis", "static-analysis", "ast"]
categories = ["development-tools"]
description = "Analysis engine for Oalacea Lumen - static analysis, diff, and history tracking"

[dependencies]
# Internal
oalacea-lumen-core = { version = "0.6.5", path = "../oalacea-lumen-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
walkdir = "2.5"
glob = "0.3"

# Text processing
regex = "1.11"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database (for history tracking)
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Git operations
git2 = "0.19"

# Parallel processing
rayon = "1.10"
dashmap = "6.1"

# Tree-sitter for AST parsing
tree-sitter = "0.22"

# Tree-sitter grammars
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-css = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
