[package]
name = "oalacea-lumen"
version = "0.6.7"
edition = "2021"
rust-version = "1.75"
authors = ["Oalacea <contact@oalacea.com>"]
license = "MIT"
repository = "https://github.com/Oalacea/lumen"
keywords = ["lumenx", "oalacea", "cli", "testing", "code-quality"]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
description = "AI-powered code analysis and test generation toolkit - Oalacea Lumen CLI"
readme = "../../README.md"

[[bin]]
name = "lumen"
path = "src/main.rs"

[dependencies]
# Internal crates
oalacea-lumen-core = { version = "0.6.7", path = "../oalacea-lumen-core" }
oalacea-lumen-analysis = { version = "0.6.7", path = "../oalacea-lumen-analysis" }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.18"
colored = "2.1"

# Async/Logging
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Serialization
serde_json = "1.0"

# File system
walkdir = "2.5"
notify = "6.0"
glob = "0.3"

# Code processing
regex = "1.11"
once_cell = "1.20"

# Templating
handlebars = "6.0"

# Diff generation
diffy = "0.3"

# Performance & Caching
rayon = "1.10"
blake3 = "1.5"
lru = "0.16"

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
